--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://marianogappa.github.io/escoba-de-15",
   "name": "escoba-argentina",
   "version": "0.0.0",
   "main": "/src/index.js",
